force-app/main/default/objects/Brand_Quote_Line__c/Brand_Quote_Line__c.object-meta.xml
<CustomObject>
    <label>Brand Quote Line</label>
    <nameField>
        <displayFormat>BQLI-{0000000000}</displayFormat>
        <label>BQ Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Quote Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>