force-app/main/default/objects/Brand_Quote_Line__c/fields/Apply_Excise_Tax__c.field-meta.xml
<CustomField>
    <fullName>Apply_Excise_Tax__c</fullName>
    <description>IF(TExt(Product_Name__r.Apply_Excise_Tax__c) = &apos;Yes&apos;  &amp;&amp;  Brand_Quote_Number__r.Apply_Excise_Tax__c  = true, 
TEXT(Product_Name__r.Apply_Excise_Tax__c), &apos;No&apos;)</description>
    <formula>IF(TExt(Product_Name__r.Apply_Excise_Tax__c) = &apos;Yes&apos;  &amp;&amp;  Brand_Quote_Number__r.Apply_Excise_Tax__c  = true, 
&apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apply Excise Tax?</label>
    <type>Text</type>
</CustomField>