force-app/main/default/objects/Brand_Quote_Line__c/fields/Available_to_Sell__c.field-meta.xml
<CustomField>
    <fullName>Available_to_Sell__c</fullName>
    <formula>Product_Name__r.Available_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Available to Sell ( Total Inventory - Total Order Qty - Total Allocated Qty - Total On Hold)</inlineHelpText>
    <label>Available to Sell</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>