force-app/main/default/objects/Brand_Quote_Line__c/fields/Billed_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Billed_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Billed Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>