force-app/main/default/objects/Brand_Quote_Line__c/fields/Brand_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Brand_Quote_Number__c</fullName>
    <label>Brand Quote Number</label>
    <referenceTo>Brand_Quote__c</referenceTo>
    <relationshipLabel>Brand Quote Lines</relationshipLabel>
    <relationshipName>Brand_Quote_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>