force-app/main/default/objects/Brand_Quote_Line__c/fields/Disty_Cost__c.field-meta.xml
<CustomField>
    <fullName>Disty_Cost__c</fullName>
    <formula>Retail_Wholesale_Price__c - Disty_Discount_Per_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disty Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>