force-app/main/default/objects/Brand_Quote_Line__c/fields/Disty_Discount_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Disty_Discount_Per_Unit__c</fullName>
    <label>Disty Discount Per Unit</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>