force-app/main/default/objects/Brand_Quote_Line__c/fields/Disty_Margin__c.field-meta.xml
<CustomField>
    <fullName>Disty_Margin__c</fullName>
    <label>Disty Margin</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>