force-app/main/default/objects/Brand_Quote_Line__c/fields/Harvest_Batch_Code__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Batch_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch ID</label>
    <referenceTo>Harvest_Batch_Code__c</referenceTo>
    <relationshipLabel>Brand Quote Lines</relationshipLabel>
    <relationshipName>Brand_Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>