force-app/main/default/objects/Brand_Quote_Line__c/fields/Invoiced_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Invoiced Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>