force-app/main/default/objects/Brand_Quote_Line__c/fields/IsBrand__c.field-meta.xml
<CustomField>
    <fullName>IsBrand__c</fullName>
    <formula>IF(NOT(ISBLANK(Product_Name__r.Licensee_Name__r.Name)),Product_Name__r.Licensee_Name__r.Id  = $User.AccountId__c, Product_Name__r.Producer_Name__r.Id  = $User.AccountId__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsBrand</label>
    <type>Checkbox</type>
</CustomField>