force-app/main/default/objects/Brand_Quote_Line__c/fields/Kushy_Punch_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Kushy_Punch_Order_Line_Item__c</fullName>
    <externalId>true</externalId>
    <label>Kushy Punch Order Line Item</label>
    <length>15</length>
    <type>Text</type>
</CustomField>