force-app/main/default/objects/Brand_Quote_Line__c/fields/Line_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Line_Gross_Profit__c</fullName>
    <formula>Line_Total_Retail_Wholesale_Price__c -  Line_Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Gross Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>