force-app/main/default/objects/Brand_Quote_Line__c/fields/Line_Total_Cannabis_Weight__c.field-meta.xml
<CustomField>
    <fullName>Line_Total_Cannabis_Weight__c</fullName>
    <formula>Cannabis_Weight__c *  Line_Total_Qty__c</formula>
    <label>Line Total Cannabis Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>