force-app/main/default/objects/Brand_Quote_Line__c/fields/Line_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Line_Total_Cost__c</fullName>
    <formula>Line_Total_Qty__c  *  Disty_Cost__c</formula>
    <inlineHelpText>Cost excluding Cultivation Tax</inlineHelpText>
    <label>Line Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>