force-app/main/default/objects/Brand_Quote_Line__c/fields/Line_Total_Cultivation_Tax__c.field-meta.xml
<CustomField>
    <fullName>Line_Total_Cultivation_Tax__c</fullName>
    <formula>Unit_Cultivation_Tax__c *  Line_Total_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Total Cultivation Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>