force-app/main/default/objects/Brand_Quote_Line__c/fields/Line_Total_Excise_Tax__c.field-meta.xml
<CustomField>
    <fullName>Line_Total_Excise_Tax__c</fullName>
    <formula>if( Apply_Excise_Tax__c = &apos;Yes&apos; &amp;&amp; Brand_Quote_Number__r.Apply_Excise_Tax__c = true , 
Unit_Excise_Tax__c *  Line_Total_Qty__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Total Excise Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>