force-app/main/default/objects/Brand_Quote_Line__c/fields/Line_Total_Qty__c.field-meta.xml
<CustomField>
    <fullName>Line_Total_Qty__c</fullName>
    <formula>MOQ__c  *    Quantity_Cases__c</formula>
    <label>Line Total Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>