force-app/main/default/objects/Brand_Quote_Line__c/fields/Line_Total_Quoted_Cost__c.field-meta.xml
<CustomField>
    <fullName>Line_Total_Quoted_Cost__c</fullName>
    <formula>Line_Total_Cost__c +  Line_Total_Cultivation_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cost if Product and Cultivation Tax</inlineHelpText>
    <label>Line Total Quoted Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>