force-app/main/default/objects/Brand_Quote_Line__c/fields/Line_Total_Retail_Wholesale_Price__c.field-meta.xml
<CustomField>
    <fullName>Line_Total_Retail_Wholesale_Price__c</fullName>
    <formula>Line_Total_Qty__c  *  Retail_Wholesale_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Total Retail Wholesale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>