force-app/main/default/objects/Brand_Quote_Line__c/fields/MOQ__c.field-meta.xml
<CustomField>
    <fullName>MOQ__c</fullName>
    <description>MOQ - Minimum Order Quantity</description>
    <inlineHelpText>Minimum Order Quantity</inlineHelpText>
    <label>Qty per Case (MOQ)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>