force-app/main/default/objects/Brand_Quote_Line__c/fields/Opportunity_Line_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line_Item_Id__c</fullName>
    <label>Opportunity Line Item Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>