force-app/main/default/objects/Brand_Quote_Line__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <formula>Brand_Quote_Number__r.Opportunity_Name__r.Order__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order #</label>
    <type>Text</type>
</CustomField>