force-app/main/default/objects/Brand_Quote_Line__c/fields/Pick_Pack_Fee__c.field-meta.xml
<CustomField>
    <fullName>Pick_Pack_Fee__c</fullName>
    <label>Pick &amp; Pack Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>