force-app/main/default/objects/Brand_Quote_Line__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Brand Quote Lines</relationshipLabel>
    <relationshipName>Brand_Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>