force-app/main/default/objects/Brand_Quote_Line__c/fields/Retail_Wholesale_Price__c.field-meta.xml
<CustomField>
    <fullName>Retail_Wholesale_Price__c</fullName>
    <label>Retail Wholesale Price</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>