force-app/main/default/objects/Brand_Quote_Line__c/fields/Unit_Cultivation_Tax__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cultivation_Tax__c</fullName>
    <formula>Product_Name__r.Cultivation_Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Cultivation Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>