force-app/main/default/objects/Brand_Quote_Line__c/fields/Unit_Excise_Tax__c.field-meta.xml
<CustomField>
    <fullName>Unit_Excise_Tax__c</fullName>
    <formula>if( Apply_Excise_Tax__c = &apos;Yes&apos; &amp;&amp; Brand_Quote_Number__r.Apply_Excise_Tax__c = true, 

if(Brand_Quote_Number__r.Ship_Confirmation_Date__c &lt;= Date( 2019,12,31),Retail_Wholesale_Price__c * (1.6) *(0.15), 
Retail_Wholesale_Price__c * (1.8) *(0.15)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Excise Tax</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>