force-app/main/default/objects/Brand_Quote_Line__c/fields/Weight_to_Stage_Manifest_Fee__c.field-meta.xml
<CustomField>
    <fullName>Weight_to_Stage_Manifest_Fee__c</fullName>
    <formula>Weight_to_Order_Ratio__c *  Brand_Quote_Number__r.Stage_Manifest_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weight to Stage Manifest Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>