force-app/main/default/objects/Brand_Quote_Line__c/recordTypes/Buy_Quote_Line.recordType-meta.xml
<RecordType>
    <fullName>Buy_Quote_Line</fullName>
    <active>true</active>
    <description>Used for Stocking, Inventory and Internal Conversion for Inventory</description>
    <label>Buy Quote Line</label>
</RecordType>