force-app/main/default/objects/Brand_Quote_Line__c/recordTypes/Lab_Quote_Line.recordType-meta.xml
<RecordType>
    <fullName>Lab_Quote_Line</fullName>
    <active>true</active>
    <description>Used for Lab Test Sampling</description>
    <label>Lab Quote Line</label>
</RecordType>