force-app/main/default/objects/Brand_Quote_Line__c/recordTypes/RMA_Quote.recordType-meta.xml
<RecordType>
    <fullName>RMA_Quote</fullName>
    <active>true</active>
    <label>RMA Quote</label>
</RecordType>