force-app/main/default/objects/Brand_Quote_Line__c/recordTypes/Sell_Quote_Line.recordType-meta.xml
<RecordType>
    <fullName>Sell_Quote_Line</fullName>
    <active>true</active>
    <description>Used for Flash Title, Sell to Exhaust Inventory - For All Product Sales to Retail</description>
    <label>Sell Quote Line</label>
</RecordType>