force-app/main/default/objects/Brand_Quote_Line__c/recordTypes/Service_Quote_Line.recordType-meta.xml
<RecordType>
    <fullName>Service_Quote_Line</fullName>
    <active>true</active>
    <description>Used only for Packaging and or Services</description>
    <label>Service Quote Line</label>
</RecordType>