force-app/main/default/objects/Brand_Quote_Line__c/recordTypes/Transfer_Quote_Line.recordType-meta.xml
<RecordType>
    <fullName>Transfer_Quote_Line</fullName>
    <active>true</active>
    <description>Used for Outbound Transfer other than Retail Channel</description>
    <label>Transfer Quote Line</label>
</RecordType>